--- a/asset/template/cardSection.html
+++ b/asset/template/cardSection.html
@@ -3,8 +3,8 @@
         <li class="order">{order}</li>
         <li class="card_uid">{cardUid}</li>
         <li class="owner">{owner}</li>
-        <li class="title_container"><span class="title"><a href="/trace/{cardUid}/recent">{title}</a></span> ::
-            <span class="size"><a href="/trace/{cardUid}">{size}</a></span></li>
+        <li class="title_container"><span class="title"><a href="/trace/{bbsUid}/{cardUid}/recent">{title}</a></span> ::
+            <span class="size"><a href="/trace/{bbsUid}/{cardUid}">{size}</a></span></li>
         <li class="open_time">{openTime}</li>
         <li class="refresh_time">{refreshTime}</li>
     </ul>
