--- a/asset/template/postForm.html
+++ b/asset/template/postForm.html
@@ -5,6 +5,9 @@
     <input type="text" name="name" placeholder="나메"/>
     <input type="text" name="console" placeholder="콘솔"/>
     <textarea name="content" placeholder="내용" spellcheck="false" required></textarea>
-    <input type="file" name="image"/>
+    <label class="file_label">
+        <span>이미지 업로드</span> : <span class="file_info"></span>
+        <input type="file" name="image"/>
+    </label>
     <input type="submit" class="submit_button" value="마솝"/>
 </form>
