--- a/asset/template/cardSection.html
+++ b/asset/template/cardSection.html
@@ -1,11 +1,11 @@
-<section class="card" id="card{cardUid}" data-uid="{cardUid}">
+<section class="card" id="card{cardUID}" data-uid="{cardUID}">
     <a name="card_{order}"></a>
     <ul class="card_head">
         <li class="order">{order}</li>
-        <li class="card_uid">{cardUid}</li>
+        <li class="card_uid">{cardUID}</li>
         <li class="owner">{owner}</li>
-        <li class="title_container"><span class="title"><a href="/trace/{bbsUid}/{cardUid}/recent">{title}</a></span> ::
-            <span class="size"><a href="/trace/{bbsUid}/{cardUid}">{size}</a></span></li>
+        <li class="title_container"><span class="title"><a href="/trace/{bbsUID}/{cardUID}/recent">{title}</a></span> ::
+            <span class="size"><a href="/trace/{bbsUID}/{cardUID}">{size}</a></span></li>
         <li class="open_time">{openTime}</li>
         <li class="refresh_time">{refreshTime}</li>
     </ul>
