--- a/asset/template/postForm.html
+++ b/asset/template/postForm.html
@@ -1,7 +1,7 @@
 <form class="forms" enctype="multipart/form-data" action="/post" method="POST">
     <input type="hidden" name="type" value="post"/>
-    <input type="hidden" name="bbs_uid" value="{bbsUid}"/>
-    <input type="hidden" name="card_uid" value="{cardUid}"/>
+    <input type="hidden" name="bbs_uid" value="{bbsUID}"/>
+    <input type="hidden" name="card_uid" value="{cardUID}"/>
     <input type="text" name="name" placeholder="나메"/>
     <input type="text" name="console" placeholder="콘솔"/>
     <textarea name="content" placeholder="내용" spellcheck="false" required></textarea>
