--- a/asset/template/cardForm.html
+++ b/asset/template/cardForm.html
@@ -1,6 +1,6 @@
 <form class="forms" enctype="multipart/form-data" action="/post" method="POST">
     <input type="hidden" name="type" value="card"/>
-    <input type="hidden" name="bbs_uid" value="{bbsUid}"/>
+    <input type="hidden" name="bbs_uid" value="{bbsUID}"/>
     <input type="text" name="title" placeholder="제목"/>
     <input type="text" name="name" placeholder="나메"/>
     <input type="text" name="console" placeholder="콘솔"/>
