--- a/asset/template/post.html
+++ b/asset/template/post.html
@@ -2,11 +2,11 @@
     <p class="info">
         : <span class="order">{order}</span>
         <span class="name">{name}</span>
-        <span class="user_id">({userId})</span>
+        <span class="user_id">({userID})</span>
     </p>
     <p class="time">
         <span class="time">{time}</span>
-        <span class="post_uid"><{postUid}></span>
+        <span class="post_uid"><{postUID}></span>
     </p>
     <p class="image">{image}</p>
     <p class="content">{content}</p>
