--- a/asset/template/postForm.html
+++ b/asset/template/postForm.html
@@ -1,3 +1,4 @@
+<a name="input_box"></a>
 <form class="forms" enctype="multipart/form-data" action="/post" method="POST">
     <input type="hidden" name="type" value="post"/>
     <input type="hidden" name="bbs_uid" value="{bbsUID}"/>
